--- a/src/main/resources/static/assets/assets.css
+++ b/src/main/resources/static/assets/assets.css
@@ -5096,6 +5096,7 @@ div#loginscreen
     background-size: cover; 
     position: absolute; 
     background-position: center; 
+    overflow-x: hidden;
     width: 100%; 
     min-height: 100%; 
     top: 0;  
